--- a/resources/style.css
+++ b/resources/style.css
@@ -1,13 +1,16 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #DFDFDF;
+    background-color: #AED9DD;
     box-sizing: border-box;
 }
 
 .section {
-    border: 3px solid #649E99;
-    width: auto;
+    border: 2px solid black;
+    width: 700px;
     margin: 30px;
+    text-align: center;
+    align-self: center;
+    background-color: white;
 }
 
 #colour1 {
@@ -32,7 +35,6 @@ body {
     display: inline-block;
     position: relative;
     top: 10px;
-    left: 10px;
     border: 1px solid black;
     box-sizing: border-box;
 
@@ -57,10 +59,12 @@ h1, h2 {
 }
 
 header {
-    background-color: #649E99;
     color: white;
     text-align: center;
     padding: 10px;
+    border-top: solid 2px white;
+    border-bottom: solid 2px white;
+    font-size: 20px;
 }
 
 .banner {
@@ -73,6 +77,7 @@ header {
 
 h3, h4, h5, li {
     margin: 20px;
+    list-style-position: inside;
 }
 
 .text h3 {
@@ -88,3 +93,8 @@ h3, h4, h5, li {
 .text h5 {
     font-size: 14px;
 }
+.center {
+    margin: 20px auto;
+    width: 50%;
+    padding: 10px;
+  }
